--- a/src/css/desktop.sass
+++ b/src/css/desktop.sass
@@ -20,6 +20,7 @@
     right: 10%
     transform: translate(0, -50%)
     text-align: center
+    height: 200px
     & h2
         font-weight: 400
         font-size: 36px
